--- a/Promoda/FadeBig.html
+++ b/Promoda/FadeBig.html
@@ -137,7 +137,7 @@
         }
 
         .tgx_text_title {
-            font-size: 155%;
+            font-size: 135%;
             color: black;
             display: inline-block;
             width: 98%;
@@ -314,7 +314,7 @@
             float: right;
             height: 30px;
             text-align: right;
-            margin-top: -8px;
+            margin-top: 8px;
             margin-right: 5px
         }
         
@@ -349,8 +349,8 @@
                 
   
 
-<div style="bottom:0px;height: 1px;text-align:left;margin-top:20px">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;">
+
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 15px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://mejorvenapromoda.com/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/VGU7zxd.png" title="compartir en facebook" width="22" /></a>
