--- a/Tiguan/FadeBig.html
+++ b/Tiguan/FadeBig.html
@@ -337,7 +337,7 @@
   
 
 
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 25px;">
+             <!--   <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 25px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://servicio.vw.com.mx/productos-de-servicio/mantenimiento/precios"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/xG92ta0.png" title="compartir en facebook" width="22" /></a>
@@ -348,7 +348,7 @@
                             <a class="shared" href="https://twitter.com/home?status=https://servicio.vw.com.mx/productos-de-servicio/mantenimiento/precios" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/KZRu00X.png" title="compartir en twitter" width="22" /></a>
                     </span>
-                </div>
+                </div>-->
                 <div class="logo">
                     <img src="https://i.imgur.com/SJiK7WX.png" style="height:55px">
                 </div>
