--- a/Posadas viaja/fade.html
+++ b/Posadas viaja/fade.html
@@ -58,13 +58,13 @@
         .value_cover {
             position: relative;
             width: 100%;
-            height: 55%;
+            height: 60%;
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/NF6uOeM.png");
+            background: url("https://i.imgur.com/z8WdPXG.jpg");
             background-size: cover;
-        } https://i.imgur.com/3Qn6bs4.jpg
+        } 
 
         .bg.cover-2 {
             background: url("https://i.imgur.com/12yOekG.jpg");
@@ -74,19 +74,19 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/wK1jlkl.jpg");
+            background: url("https://i.imgur.com/t91CHuf.jpg");
             background-size: cover;
           
         }
 
         .value_cover .value_logo {
             position: absolute;
-            bottom: -15px;
+            bottom: -10px;
             width:105px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 40%;
-            left: -30px;
+            margin-left: 85px;
+            
             background-color: #2e2d67;
             padding: 5px;
             border-radius: 20px;
@@ -131,7 +131,7 @@
 
         .value_text {
             position: absolute;
-            top: 54%;
+            top: 60%;
             left: 7.5px;
             width: 97%;
             padding: 0.3em;
@@ -348,8 +348,7 @@
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-   <b> Reserva del 1 de octubre al 9 de noviembre de 2018 </b>  y viaja hasta el <b>29 de febrero de 2019,</b> para que viajes a ¡más de 60 increíbles destinos en México!
-
+   <b> Reserva del 1 de octubre al 9 de noviembre de 2018 </b>  y viaja hasta el <b>29.
 
                 </p> 
             </span> 
