--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -574,7 +574,7 @@ url('fonts/') format('svg');
     <!--#i41.i42.shape.html:shape/html-->
 <div id="i42"></div>
 <!--#/#--><!--#i41.i105.image.html:image/html-->
-<img id="i105" src="https://i.imgur.com/T3Sv28A.jpg"/>
+<img id="i105" src="https://i.imgur.com/7WQcQ7E.jpg"/>
 <!--#/#--><!--#i41.i107.button.html:button/html-->
 <button id="i107"></button>
 <!--#/#--><!--#i41.i111.image.html:image/html-->
