--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -520,7 +520,7 @@ url('fonts/') format('svg');
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/trOxmmx.png"/>
+<img id="i60" src="https://i.imgur.com/MQ4uNoy.jpg"/>
 <!--#/#--><!--#i8.i62.text.html:text/html-->
 <div id="i62">Reserva del 1 de octubre al 9 de noviembre de 2018</div>
 <!--#/#--><!--#i8.i64.image.html:image/html-->
