--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -520,7 +520,7 @@ url('fonts/') format('svg');
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/MQ4uNoy.jpg"/>
+<img id="i60" src="https://i.imgur.com/trOxmmx.png"/>
 <!--#/#--><!--#i8.i62.text.html:text/html-->
 <div id="i62">Reserva del 1 de octubre al 9 de noviembre de 2018</div>
 <!--#/#--><!--#i8.i64.image.html:image/html-->
@@ -538,7 +538,7 @@ url('fonts/') format('svg');
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i75.image.html:image/html-->
-<img id="i75" src="https://i.imgur.com/qIGMR8E.png"/>
+<img id="i75" src="https://i.imgur.com/MQ4uNoy.jpg"/>
 <!--#/#--><!--#i19.i77.button.html:button/html-->
 <button id="i77"></button>
 <!--#/#--><!--#i19.i79.image.html:image/html-->
