--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -538,7 +538,7 @@ url('fonts/') format('svg');
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i75.image.html:image/html-->
-<img id="i75" src="https://i.imgur.com/MQ4uNoy.jpg"/>
+<img id="i75" src="https://i.imgur.com/Fl2Qvu7.jpg"/>
 <!--#/#--><!--#i19.i77.button.html:button/html-->
 <button id="i77"></button>
 <!--#/#--><!--#i19.i79.image.html:image/html-->
