--- a/Tiguan/Cube.html
+++ b/Tiguan/Cube.html
@@ -815,7 +815,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Llegó Tu Momento Tiguan.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/29F0aip.png"/>
+<img id="i58" src="https://i.imgur.com/gSWDhgD.png"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
 <img id="i184" src="https://i.imgur.com/SJiK7WX.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
