Ajuste texto fade

--- a/Requiez/FadeBig.html
+++ b/Requiez/FadeBig.html
@@ -347,7 +347,7 @@
             
           
                 <p style="margin-right:9px; text-align: justify; width: 95%; margin-top: 5px; line-height: 1.2em">
-                Contamos con gran variedad de modelos: <b> comodidad y belleza </b> en un mismo espacio.
+                Te ofrecemos gran variedad de modelos: <b> comodidad y belleza </b> en un mismo espacio.
   
 
 <!--<div style="bottom:0px;height: 1px;text-align:left;margin-top:20px">
