--- a/heb/Cube.html
+++ b/heb/Cube.html
@@ -911,7 +911,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Deseas realizar tus compras de navidad con los mas increíbles descuentos?</div>
+<div id="i24">¿Deseas realizar tus compras de navidad con los más increíbles descuentos?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/Tpxm7Rk.jpg"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
@@ -931,7 +931,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Donde encontrar los mejores descuentos para Cyber Monday</div>
+<div id="i34">Dónde encontrar los mejores descuentos para Cyber Monday</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/GS0SUCI.jpg"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
