--- a/heb/FadeBig.html
+++ b/heb/FadeBig.html
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              Elige, compara, compra, reserva y obtén los mejores descuentos sin salir de tu hogar. ¿ya sabes como?
+              Elige, compara, compra, reserva y obtén los mejores descuentos sin salir de tu hogar. ¿ya sabes cómo?
             </span>
             <br/>  
             
