--- a/Formatos ADS/hover text/hover-text-lines.html
+++ b/Formatos ADS/hover text/hover-text-lines.html
@@ -13,16 +13,16 @@
     <style>
 
     @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,700);
-@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url();
 figure.snip1477 {
   font-family: 'Raleway', Arial, sans-serif;
   position: relative;
   float: left;
   overflow: hidden;
   margin: 10px 1%;
-  min-width: 230px;
-  max-width: 315px;
-  width: 100%;
+  
+  width:320px;
+  height: 480px;
   color: #ffffff;
   text-align: center;
   font-size: 16px;
@@ -51,7 +51,7 @@ figure.snip1477 .title {
 figure.snip1477 .title:before,
 figure.snip1477 .title:after {
   height: 2px;
-  width: 400px;
+  width: 320px;
   position: absolute;
   content: '';
   background-color: #ffffff;
@@ -71,7 +71,7 @@ figure.snip1477 .title:after {
 figure.snip1477 .title div:before,
 figure.snip1477 .title div:after {
   width: 2px;
-  height: 300px;
+  height: 480px;
   position: absolute;
   content: '';
   background-color: #ffffff;
