--- a/Formatos ADS/hover text/hover-text.html
+++ b/Formatos ADS/hover text/hover-text.html
@@ -24,7 +24,7 @@
     transform: translate(-50%,-50%);
     width: 320px;
     height: 480px;
-    background: #262626;
+    background: #ca130f;
     overflow: hidden;
 }
 .card .imgBx,
@@ -47,7 +47,7 @@
     width: 100%;
 }
 .card .details {
-    background: #262626;
+    background: #ca130f;
     top: 0;
     left: 100%;
     padding: 60px 30px;
@@ -74,13 +74,13 @@
         <div class="card">
         	 <a href=" https://web.asdeporte.com/evento/global-energy-race-cdmx-2018-runwithus/" target="_blank">
             <div class="imgBx">
-                <img src="https://i.imgur.com/ezVqTMx.jpg">
+                <img src="https://i.imgur.com/Amrpyt6.jpg">
             </div>
             <div class="details">
-                <h2>What is Lorem Ipsum?</h2>
+                <h2>Haz una Pausa</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-            <div><img src="https://i.imgur.com/Eb6ZJ4Z.jpg" style="height:22px; margin-left: 25px; margin-top: 20px"> </span></div>
+            <div><img src="https://i.imgur.com/UWN9qqa.png" style="height:70px; float: right; margin-top: 50px"> </span></div>
 
             </div>
         </a>
