--- a/Promoda/FadeBig.html
+++ b/Promoda/FadeBig.html
@@ -71,7 +71,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/IGDtYSz.png");
+            background: url("https://i.imgur.com/wrARb3U.jpg");
             background-size: cover;
             
         }
