--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -75,7 +75,7 @@
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/Ha1VlfU.png)
+            background-image: url(https://i.imgur.com/kQyNO6M.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
