--- a/Heineken/FadeExt.html
+++ b/Heineken/FadeExt.html
@@ -60,19 +60,19 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/yX5lgVX.png");
+            background: url("https://i.imgur.com/tJDYQek.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/iM5JEDh.png");
+            background: url("https://i.imgur.com/Dj9JCN7.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/F57bns9.png");
+            background: url("https://i.imgur.com/uaXnS4n.png");
             background-size: cover;
           
         }
