--- a/Heineken/FadeExt.html
+++ b/Heineken/FadeExt.html
@@ -325,7 +325,7 @@
 
 <body class="xcaret2">
     <div class="xcaret2_wrapper carousel-wrapper size_320x480" style="border: 1px solid #c5c5c5" id="cta" onclick="openUrl();">
-        <a href="https://heinekenmexico.com/marcas?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta" style="display: block;" target="block">
+        <a href="https://heinekenmexico.com/cultura-cervecera?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta" style="display: block;" target="block">
         <div class="xcaret2_cover bg cover-1 carousel-item item-1">
             <div class="xcaret2_logo"><span class="xcaret2_text_bold xcaret2_text_small"></span></div>
         </div>
@@ -363,13 +363,13 @@
               <div style="bottom:0px;height: 1px;text-align:left;margin-top:-8%">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:20px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://heinekenmexico.com/marcas"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://heinekenmexico.com/cultura-cervecera"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/CGRZhv9.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url=https://heinekenmexico.com/marcas" target="block">
+                            <a class="shared" href="https://plus.google.com/share?url=https://heinekenmexico.com/cultura-cervecera" target="block">
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/Y2MUAIs.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://heinekenmexico.com/marcas" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://heinekenmexico.com/cultura-cervecera" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/Bgyrw4T.png" title="compartir en twitter" width="22" /></a>
                     </span>
                     </div>
