ajustes fadeext, fade nuevo

--- a/Heineken/FadeExt.html
+++ b/Heineken/FadeExt.html
@@ -130,8 +130,8 @@
             color: #000;
             display: inline-block;
             width: 97%;
-            margin-bottom: -5px;
-            margin-top: 7px;
+            margin-bottom: 5px;
+            margin-top: 1px;
             text-align: center;
             margin-left: -5px;
             line-height: 1.05em
@@ -150,7 +150,7 @@
         }
 
         .xcaret2_text_small {
-            font-size: 90%;
+            font-size: 110%;
         }
 
         ul {
@@ -346,14 +346,13 @@
             <span class="xcaret2_text_light xcaret2_text_small" style="color:black;">
                 <p style="margin-right:9px; text-align: justify; width: 95%; margin-top: 5px; line-height: 1.1em">
                     
-<b> ·1. </b>Selección de ingredientes  <br>
-<b> ·2. </b>Malteado  <br>
-<b> ·3. </b>Macerado  <br>
-<b> ·4. </b>Ebullición/Lupulización  <br>
-<b> ·5. </b>Enfriamiento  <br>
-<b> ·6. </b>Fermentación y maduración  <br>
-<b> ·7. </b>Acondicionamiento  <br>
-<b> ·8. </b>Empaque  <br>
+<b> ·1. </b>Selección de ingredientes.  <br>
+<b> ·2. </b>Malteado y macerado.  <br>
+<b> ·3. </b>Ebullición/Lupulización.   <br>
+<b> ·4. </b>Enfriamiento.  <br>
+<b> ·5. </b>Fermentación y maduración.  <br>
+<b> ·6. </b>Acondicionamiento y empaque.  <br>
+
 
 
 
