correccion formatos heinz

--- a/Heinz papillas/Cube.html
+++ b/Heinz papillas/Cube.html
@@ -844,7 +844,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Por qué confiar en las papillas Heinz como complemento para la nutrición de tu bebé?</div>
+<div id="i14">¿Por qué confiar en las papillas Heinz como complemento para la nutrición de tu bebé?.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/slFryHg.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -880,7 +880,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Las papillas Heinz son ideales como complemento para el desarrollo y crecimiento de tu bebé</div>
+<div id="i34">Las papillas Heinz son ideales como complemento para el desarrollo y crecimiento de tu bebé.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/8IUXZZw.jpg"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
