--- a/Heinz mexico/FadeBig.html
+++ b/Heinz mexico/FadeBig.html
@@ -348,7 +348,7 @@
                 
   
 
-<div id="botones-para-compartir" style="display:inline;float:left;margin-top:28px;margin-left:7px;"> <span>   <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a>
+<div id="botones-para-compartir" style="display:inline;float:left;margin-top:28px;margin-left:7px;"> <span>   <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a> <img alt="compartir en twitter" class="twitteri" height="22" src="s" title="compartir en twitter" width="22" /></a>
               
                   </span>
             </div>     
