--- a/Heinz mexico/Slider300x600.html
+++ b/Heinz mexico/Slider300x600.html
@@ -246,7 +246,7 @@
                         
                         <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:30px; width:99%; text-align:center;">
                         <p style="margin-top: -60px; line-height: 1.2em; margin-left: 3px; ">
-                        <strong>Somos la salsa nº 1 <br>del mundo<br> ¿Sabes por qué?</strong>
+                        <strong>Somos la salsa nº 1 <br>del mundo.<br> ¿Sabes por qué?</strong>
 </p></span></div>
 
 
