--- a/Heinz papillas/videobigprueba.html
+++ b/Heinz papillas/videobigprueba.html
@@ -269,10 +269,11 @@
                     height: '320',
                     width: '500',
                     videoId: 'vtIBwNV2uK8',
-                    autoplay: 1,
+                    widgetid:0,
+                    autoplay: 0,
                     playerVars: {
                         loop: 1,
-                        controls: 0
+                        controls:0,
                     },
                     events: {
                         'onReady': onPlayerReady,
