--- a/Formatos ADS/hover text/hover-text.html
+++ b/Formatos ADS/hover text/hover-text.html
@@ -77,7 +77,7 @@
                 <img src="https://i.imgur.com/Amrpyt6.jpg">
             </div>
             <div class="details">
-                <h2>Haz una Pausa</h2>
+                <h2>Haz una Pausa.</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
             <div><img src="https://i.imgur.com/UWN9qqa.png" style="height:70px; float: right; margin-top: 50px"> </span></div>
