--- a/Tiguan/FadeBig.html
+++ b/Tiguan/FadeBig.html
@@ -54,12 +54,12 @@
             margin-bottom: -20px;
             position: relative;
             width: 100%;
-            height: 70%;
+            height: 68%;
         }
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/sDxwt3F.png");
+            background: url("https://i.imgur.com/56eGMRY.jpg");
             background-size: cover;
         }
 
@@ -70,7 +70,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/FHSVMvF.png");
+            background: url("https://i.imgur.com/YPhItPe.jpg");
             background-size: cover;
             
         }
