--- a/Heinz mexico/Cube.html
+++ b/Heinz mexico/Cube.html
@@ -862,7 +862,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Realza el sabor de tus comidas. ¿Que esperas?</div>
+<div id="i24">Realza el sabor de tus comidas. ¿Qué esperas?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/qh4nfk9.jpg"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
