--- a/Heinz papillas/Cube.html
+++ b/Heinz papillas/Cube.html
@@ -862,7 +862,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Las papillas Heinz son 100% fruta, no contienen , colorantes  ni sabores artificiales.</div>
+<div id="i24">Las papillas Heinz son 100% fruta, no contienen colorantes  ni sabores artificiales.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/3nkGURS.jpg"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
