--- a/Heineken/Cube.html
+++ b/Heineken/Cube.html
@@ -498,7 +498,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -510,11 +510,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 229px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(-22px, 70px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-22px, 70px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-22px, 70px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-22px, 70px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -528,11 +528,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 64px;
-        -ms-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 32px;
+        -ms-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -540,7 +540,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 99.6%;
         -ms-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
@@ -576,7 +576,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -588,11 +588,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 234px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(-23px, 74px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-23px, 74px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-23px, 74px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-23px, 74px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -732,14 +732,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i184.image.css:image/base/css*/
-#i184 { opacity: 1; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 64px;
-        -ms-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
+/*#/#*//*#i5.i224.image.css:image/base/css*/
+#i224 { opacity: 1; }
+/*#/#*//*#i224.i225.positioning.css:positioning/base/css.2*/
+#i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 32px;
+        -ms-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -783,7 +783,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -793,7 +793,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 23px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 257px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(-10px, 68px) rotate(0deg);
@@ -809,6 +809,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i6.i226.image.css:image/base/css*/
+#i226 { opacity: 1; }
+/*#/#*//*#i226.i227.positioning.css:positioning/base/css.2*/
+#i226 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 32px;
+        -ms-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 214px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -849,15 +858,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 226px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 226px) rotate(0deg);
 }
-/*#/#*//*#i6.i204.image.css:image/base/css*/
-#i204 { opacity: 1; }
-/*#/#*//*#i204.i205.positioning.css:positioning/base/css.2*/
-#i204 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 64px;
-        -ms-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 186px) rotate(0deg);
-}
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
@@ -884,7 +884,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/PS3SCjV.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/1p7uWge.png"/>
+<img id="i181" src="https://i.imgur.com/sCWOSyN.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
@@ -900,11 +900,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Sabes en que se diferencia una cerveza ALE de una LAGER?</div>
+<div id="i24">¿Sabes en qué se diferencia una cerveza ALE de una LAGER?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/xbzjRTz.png"/>
-<!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/1p7uWge.png"/>
+<!--#/#--><!--#i5.i224.image.html:image/html-->
+<img id="i224" src="https://i.imgur.com/sCWOSyN.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i186.image.html:image/html-->
@@ -920,9 +920,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Sabes que es una cerveza tipo LAMBIC?</div>
+<div id="i34">¿Sabes qué es una cerveza tipo LAMBIC?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/R5AR2u2.png"/>
+<!--#/#--><!--#i6.i226.image.html:image/html-->
+<img id="i226" src="https://i.imgur.com/sCWOSyN.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i194.image.html:image/html-->
@@ -931,8 +933,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i198" src="https://i.imgur.com/Y2MUAIs.png"/>
 <!--#/#--><!--#i6.i202.image.html:image/html-->
 <img id="i202" src="https://i.imgur.com/Bgyrw4T.png"/>
-<!--#/#--><!--#i6.i204.image.html:image/html-->
-<img id="i204" src="https://i.imgur.com/1p7uWge.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -1038,13 +1038,17 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i184.image.js:image/base/js*/
+/*#/#*//*#i5.i224.image.js:image/base/js*/
 
-/*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
-bmShow('i184');
+/*#/#*//*#i224.i225.positioning.js:positioning/base/js.2*/
+bmShow('i224');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -1105,9 +1109,17 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i226.image.js:image/base/js*/
+
+/*#/#*//*#i226.i227.positioning.js:positioning/base/js.2*/
+bmShow('i226');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -1166,13 +1178,13 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i204.image.js:image/base/js*/
-
-/*#/#*//*#i204.i205.positioning.js:positioning/base/js.2*/
-bmShow('i204');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -1214,7 +1226,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
-name: 1p7uWge.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: sCWOSyN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1252,10 +1264,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i184.image.meta:image/meta*/
-name: 1p7uWge.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i5.i224.image.meta:image/meta*/
+name: sCWOSyN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i224.i225.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1291,6 +1303,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i226.image.meta:image/meta*/
+name: sCWOSyN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i226.i227.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
@@ -1309,11 +1326,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Bgyrw4T.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i202.i203.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i204.image.meta:image/meta*/
-name: 1p7uWge.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i204.i205.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
