--- a/Heineken/Slider.html
+++ b/Heineken/Slider.html
@@ -62,8 +62,8 @@
         }
         .AmericanSlide .bzm_text {
             margin-top: 20px;
-            margin-left: 5px;
-            text-align: center;
+            margin-left: 2px;
+            text-align: left;
             margin-bottom: 
         }
         .AmericanSlide .bzm_text_bold,
@@ -210,7 +210,8 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:-10px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:18px; text-align:left;">¿Sabes cómo se hace una <br> buena cerveza artesanal?</span> 
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:18px; text-align:left;">
+                    ¿Sabes cómo se hace una <br> buena cerveza artesanal?</span> 
                     
                     
                     <img class="logo" src="https://i.imgur.com/1p7uWge.png" alt=""> </div>
