alineacion texto gif

--- a/Heineken/Gif.html
+++ b/Heineken/Gif.html
@@ -50,7 +50,7 @@
         .AmericanFijo .bzm_text {
             margin-top: -10px;
             margin-left: 8px;
-            text-align: center;
+            text-align: left;
             line-height: 1em;
             font: trebuchet MS 
         }
@@ -195,7 +195,7 @@
             border-radius: 0px;
             float: right;
             height: 15px;
-            text-align: center;
+            text-align: left;
             margin-top: 20px;
             margin-right: 2.5px
         }
@@ -211,7 +211,7 @@
             background-color: #;
             padding: 5px;
             border-radius: 20px;
-            text-align: center;
+            text-align: ;
         }
           
 	 </style> 
