--- a/Posadas viaja/fade.html
+++ b/Posadas viaja/fade.html
@@ -140,7 +140,7 @@
         }
 
         .value_text_title {
-            font-size: 200%;
+            font-size: 130%;
             color: #453936;
             display: inline-block;
             width: 97%;
@@ -343,7 +343,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             Reserva 2 noches y te regalamos una.
+             Hospédate 2 noches y te regalamos 1 certificado por 1 noche gratis.
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
