--- a/Posadas viaja/fade.html
+++ b/Posadas viaja/fade.html
@@ -131,7 +131,7 @@
 
         .value_text {
             position: absolute;
-            top: 60%;
+            top: 58%;
             left: 7.5px;
             width: 97%;
             padding: 0.3em;
@@ -140,7 +140,7 @@
         }
 
         .value_text_title {
-            font-size: 130%;
+            font-size: 160%;
             color: #453936;
             display: inline-block;
             width: 97%;
@@ -347,7 +347,7 @@
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
-                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
+                <p style="margin-right:10px; text-align: center; width: 90%; margin-top: 15px; line-height: 1.2em">
    <b> Reserva del 1 de octubre al 9 de noviembre de 2018 </b>  y viaja hasta el <b>29 de febrero de 2019.
 
                 </p> 
