--- a/Posadas viaja/Cube.html
+++ b/Posadas viaja/Cube.html
@@ -99,11 +99,11 @@ url('fonts/') format('svg');
 #i20 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.2*/
-#i20 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
 }
 /*#/#*//*#i19.i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
@@ -135,13 +135,13 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
 }
 /*#/#*//*#i19.i83.text.css:text/base/css*/
-#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 13px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
-#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 224px; height: 46px;
-        -ms-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
-        transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 222px; height: 46px;
+        -ms-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
+        transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
 }
 /*#/#*//*#i19.i85.image.css:image/base/css*/
 #i85 { opacity: 1; }
@@ -687,6 +687,7 @@ bmShow('i87');
 /*#/#*//*#i87.i89.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i87');
+
 
 
 if ('click' === 'click') {
