Actualizado el cubo

--- a/Posadas viaja/Cube.html
+++ b/Posadas viaja/Cube.html
@@ -100,10 +100,10 @@ url('fonts/') format('svg');
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.2*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(-3px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i19.i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
@@ -135,13 +135,13 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
 }
 /*#/#*//*#i19.i83.text.css:text/base/css*/
-#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 13px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
-#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 222px; height: 46px;
-        -ms-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
-        transform: translate(0, 0) translate(42px, 191px) rotate(0deg);
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 258px; height: 46px;
+        -ms-transform: translate(0, 0) translate(23px, 190px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(23px, 190px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(23px, 190px) rotate(0deg);
+        transform: translate(0, 0) translate(23px, 190px) rotate(0deg);
 }
 /*#/#*//*#i19.i85.image.css:image/base/css*/
 #i85 { opacity: 1; }
@@ -655,11 +655,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i8');
 
-el.addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -688,7 +684,11 @@ bmShow('i87');
 /* Name: On Click; */
 var el = document.getElementById('i87');
 
-
+el.addEventListener('click', function(e){
+    /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -697,11 +697,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i19');
 
-el.addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -730,7 +726,11 @@ bmShow('i101');
 /* Name: On Click; */
 var el = document.getElementById('i101');
 
-
+el.addEventListener('click', function(e){
+    /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -739,11 +739,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i30');
 
-el.addEventListener('click', function(e){
-    /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -772,7 +768,11 @@ bmShow('i117');
 /* Name: On Click; */
 var el = document.getElementById('i117');
 
-
+el.addEventListener('click', function(e){
+    /*#i119.i120.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -781,11 +781,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 var el = document.getElementById('i41');
 
-el.addEventListener('click', function(e){
-    /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
