--- a/RUA oct/FadeBig2.html
+++ b/RUA oct/FadeBig2.html
@@ -136,7 +136,7 @@
         }
 
         .tgx_text_title {
-            font-size: 125%;
+            font-size: 135%;
             color: black;
             display: inline-block;
             width: 98%;
@@ -343,7 +343,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               El Tribunal Supremo te da la razón: puedes recuperar gastos de tu hipoteca.
+               ¿Tienes hipoteca? Recupera los gastos de hipoteca.
             </span>
             
             
