--- a/excellence/CubeC.html
+++ b/excellence/CubeC.html
@@ -834,7 +834,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i183.button.html:button/html-->
 <button id="i183">Book now</button>
 <!--#/#--><!--#i4.i218.text.html:text/html-->
-<div id="i218">Well Deserved Scape</div>
+<div id="i218">Well Deserved Escape</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -850,7 +850,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i197.image.html:image/html-->
 <img id="i197" src="https://i.imgur.com/AEpSopb.png"/>
 <!--#/#--><!--#i5.i216.text.html:text/html-->
-<div id="i216">Well Deserved Scape</div>
+<div id="i216">Well Deserved Escape</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i191.button.html:button/html-->
 <button id="i191">Book now</button>
 <!--#/#--><!--#i6.i193.text.html:text/html-->
-<div id="i193">Well Deserved Scape</div>
+<div id="i193">Well Deserved Escape</div>
 <!--#/#--><!--#i6.i199.image.html:image/html-->
 <img id="i199" src="https://i.imgur.com/AEpSopb.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -986,7 +986,7 @@ customName: false;
 /*#/#*//*#i183.i184.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i218.text.meta:text/meta*/
-name: Well Deserved Scape; customName: false;
+name: Well Deserved Escape; customName: false;
 /*#/#*//*#i218.i219.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -1015,7 +1015,7 @@ customName: false;
 /*#/#*//*#i197.i198.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i216.text.meta:text/meta*/
-name: Well Deserved Scape; customName: false;
+name: Well Deserved Escape; customName: false;
 /*#/#*//*#i216.i217.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
