--- a/Formatos ADS/hover text/hover-text.html
+++ b/Formatos ADS/hover text/hover-text.html
@@ -35,13 +35,13 @@
     box-sizing: border-box;
     transition: .5s;
 }
-.card .imgBx {
+.card:hover .imgBx {
     top: 0;
     left: 0;
 }
 .card:hover .imgBx {
     top: 0;
-    left: -100%;
+    left: 0%;
 }
 .card .imgBx img {
     width: 100%;
@@ -61,30 +61,42 @@
     text-align: center;
     margin: 0;
     padding: 0 0 10px;
-    border-bottom: 2px solid #fff;
+    
 
 }
 .card .details p {
     margin: 20px 0 0;
     color: #fff;
 }
+
+.facebooki{
+    margin-left: 40px;
+}
+.facebooki, .twitteri, .googlei{
+    padding:15px;
+}
 </style>
 
 <body>
-        <div class="card">
-        	 <a href=" https://web.asdeporte.com/evento/global-energy-race-cdmx-2018-runwithus/" target="_blank">
+         <a href=" https://web.asdeporte.com/evento/global-energy-race-cdmx-2018-runwithus/" target="_blank">
+            <div class="card">
+        	
             <div class="imgBx">
                 <img src="https://i.imgur.com/Amrpyt6.jpg">
             </div>
             <div class="details">
                 <h2>Haz una Pausa.</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p style="text-align: justify;">Hoy estás a un NESCAFÉ® de comenzar tu día con la combinación perfecta. Cuando mezclas NESCAFÉ® Tradición con leche pruebas todo el sabor, el aroma y la suavidad del mejor café; que te inspira a nuevos comienzos.</p>
 
-            <div><img src="https://i.imgur.com/UWN9qqa.png" style="height:70px; float: right; margin-top: 50px"> </span></div>
+            <div><img src="https://i.imgur.com/UWN9qqa.png" style="height:90px;  margin-top: 40px; margin-left: 90px; margin-bottom: 20px;"> </span></div>
+
+             <div id="botones-para-compartir" style="display:inline;float:center; margin-top:155px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.excellenceresorts.com" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="28" src="https://i.imgur.com/OB197Ol.png" title="compartir en facebook" width="28" /></a><a class="shared" href="https://plus.google.com/share?url= https://www.excellenceresorts.com" target="_blank"> <img alt="compartir en google+" class="googlei" height="28" src="https://i.imgur.com/8ePTogj.png" title="compartir en google+" width="28" /></a><a class="shared" href="https://twitter.com/home?status= https://www.excellenceresorts.com" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="28" src="https://i.imgur.com/Qsr2neY.png" title="compartir en twitter" width="28" /></a></span></div>
+
+
 
             </div>
         </a>
         </div>
-
+        </a>
       </body>
 </html>
