Quitar logo RUA

--- a/RUA oct/Cube2.html
+++ b/RUA oct/Cube2.html
@@ -803,7 +803,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/bKEJKed.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/W8Pt59D.jpg"/>
+<img id="i181" src=""/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -815,7 +815,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/wZeRyGs.png"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/W8Pt59D.jpg"/>
+<img id="i184" src=""/>
 <!--#/#--><!--#i5.i190.text.html:text/html-->
 <div id="i190">¿Qué necesito para recuperar los gastos de hipoteca?</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -829,7 +829,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/3Rftr28.png"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
-<img id="i186" src="https://i.imgur.com/W8Pt59D.jpg"/>
+<img id="i186" src=""/>
 <!--#/#--><!--#i6.i192.text.html:text/html-->
 <div id="i192">¿Qué necesito para recuperar los gastos de hipoteca?</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
