--- a/RUA oct/FadeBig1.html
+++ b/RUA oct/FadeBig1.html
@@ -127,7 +127,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 72%;
+            top: 75%;
             left: 7.5px;
             width: 91%;
             padding: 0em;
@@ -136,7 +136,7 @@
         }
 
         .tgx_text_title {
-            font-size: 125%;
+            font-size: 135%;
             color: black;
             display: inline-block;
             width: 98%;
@@ -365,7 +365,7 @@
                     </span>
                 </div> -->
                 <div class="logo">
-                    <img src="https://i.imgur.com/W8Pt59D.jpg" style="height:52px">
+                    <img src="" style="height:52px">
                 </div>
                 
         
