--- a/RUA oct/FadeBig2.html
+++ b/RUA oct/FadeBig2.html
@@ -127,7 +127,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 72%;
+            top: 75%;
             left: 7.5px;
             width: 91%;
             padding: 0em;
@@ -365,7 +365,7 @@
                     </span>
                 </div> -->
                 <div class="logo">
-                    <img src="https://i.imgur.com/W8Pt59D.jpg" style="height:52px">
+                    <img src="" style="height:52px">
                 </div>
                 
         
